# jASTERIX

./: .clang-format  CMakeLists.txt  README.md  format.sh
analyze/: adsb_quality.py  cat001_mapping_check.py  cat020_mapping_check.py  cat021_mapping_check.py  cat048_mapping_check.py  cat062_mapping_check.py  data_items.py  detection_type.py  dubious_tracks.py  filtered_print.py  mlat_mapping_check.py  psr_tracks.py  radar_mapping_check.py  reconst.py  single_technology_tracks.py  track_detection_type.py  track_mapping_check.py
analyze/reconst_util/: chain.py  geo_position.py  reconstructed_chain.py  reconstructor.py  reference_update.py  target_report.py  umkalman2d.py
analyze/util/: adsb.py  common.py  mlat.py  mysql_wrapper.py  radar.py  record_extractor.py  track.py
appimage/appdir/: jasterix.desktop
definitions/: data_block_definition.json
definitions/categories/: categories.json
definitions/categories/001/: cat001_1.1.json
definitions/categories/002/: cat002_1.0.json
definitions/categories/010/: cat010_0.24_sensis.json  cat010_0.31.json
definitions/categories/019/: cat019_1.3.json
definitions/categories/020/: cat020_1.2.json  cat020_1.5.json  cat020_1.5_mapping.json  cat020_1.8.json  cat020_ref_1.3.json
definitions/categories/021/: cat021_0.26.json  cat021_1.4.json  cat021_2.1.json  cat021_2.1_mapping.json  cat021_2.4.json  cat021_ref_1.5.json
definitions/categories/023/: cat023_1.2.json
definitions/categories/034/: cat034_1.26.json
definitions/categories/048/: cat048_1.15.json  cat048_1.15_mapping.json
definitions/categories/062/: cat062_1.12.json  cat062_1.18.json
definitions/categories/063/: cat063_1.0.json
definitions/categories/065/: cat065_1.3.json
definitions/framings/: netto.json  rff.json
include/jasterix/: CMakeLists.txt  category.h  edition.h  editionbase.h  frameparser.h  global.h.in  iteminfo.h  itemparserbase.h  jasterix.h  mapping.h  record.h  ref.h  refedition.h  spf.h  spfedition.h
lib/: catch.hpp  json.hpp
src/: CMakeLists.txt  jasterix.cpp  jasterix.h
src/asterix/: CMakeLists.txt  asterixparser.cpp  asterixparser.h  category.cpp  category.h  datablockfindertask.h  edition.cpp  edition.h  editionbase.cpp  mapping.cpp  mapping.h  record.cpp  record.h  ref.cpp  refedition.cpp  spf.cpp  spfedition.cpp
src/client/: CMakeLists.txt  main.cpp  test.cpp
src/frames/: CMakeLists.txt  frameparser.cpp  frameparser.h  frameparsertask.h
src/items/: CMakeLists.txt  compounditemparser.cpp  compounditemparser.h  dynamicbytesitemparser.cpp  dynamicbytesitemparser.h  extendablebitsitemparser.cpp  extendablebitsitemparser.h  extendableitemparser.cpp  extendableitemparser.h  fixedbitfielditemparser.cpp  fixedbitfielditemparser.h  fixedbitsitemparser.cpp  fixedbitsitemparser.h  fixedbytesitemparser.cpp  fixedbytesitemparser.h  itemparser.cpp  itemparser.h  itemparserbase.cpp  itemparserbase.h  optionalitemparser.cpp  optionalitemparser.h  repetetiveitemparser.cpp  repetetiveitemparser.h  skipbytesitemparser.cpp  skipbytesitemparser.h
src/parse/: CMakeLists.txt  dynamicbytesitemparser.cpp  extendablebitsitemparser.h  extendableitemparser.h  fixedbitfielditemparser.cpp  fixedbitfielditemparser.h  fixedbitsitemparser.h  frameparser.cpp  frameparser.h  frameparsertask.h  itemparser.h  repetetiveitemparser.cpp
src/test/: CMakeLists.txt  cat001_1.1.cpp  cat002_1.0.cpp  cat019_1.3.cpp  cat020_1.5.cpp  cat021_2.1.cpp  cat034_1.26.cpp  cat048_1.15.cpp  cat062_1.12.cpp  cat062_1.16.cpp  cat063_1.0.cpp  cat065_1.3.cpp  main_tests.cpp  test_cat001_1.1.cpp  test_cat002_1.0.cpp  test_cat004_1.4.cpp  test_cat010_0.24_sensis.cpp  test_cat010_0.31.cpp  test_cat019_1.3.cpp  test_cat020_1.5.cpp  test_cat021_0.26.cpp  test_cat021_2.1.cpp  test_cat030_7.0.cpp  test_cat034_1.26.cpp  test_cat048_1.15.cpp  test_cat048_1.23.cpp  test_cat062_1.12.cpp  test_cat062_1.16.cpp  test_cat063_1.0.cpp  test_cat065_1.3.cpp  test_cat247_1.2.cpp  test_cat252_7.0.cpp  test_categories.cpp  test_jasterix.cpp  test_jasterix.h  test_limits.cpp  test_performance.cpp  test_ram.cpp
src/utils/: CMakeLists.txt  base64.cpp  base64.h  files.cpp  files.h  global.h.in  hashchecker.cpp  hashchecker.h  logger.h  string_conv.cpp  string_conv.h  system.h
src/write/: CMakeLists.txt  jsonfilewritetask.h  jsonwriter.cpp  jsonwriter.h
